# simple-api-rust

./: .gitignore  Makefile  README.md  Rocket.toml  rustfmt.toml
server/: Cargo.toml
server/migrations/2022-06-28-213241_users/: up.sql
server/migrations/2022-07-03-015337_login/: down.sql  up.sql
server/migrations/2022-07-14-014359_message/: up.sql
server/src/: application.rs  auth.rs  infrastructure.rs  main.rs  model.rs  schema.rs
server/src/application/: app.rs  error.rs  health_handler.rs  message_handler.rs  middleware.rs  user_handler.rs
server/src/auth/: auth.rs  error.rs  middleware.rs  token.rs
server/src/db/: database.rs
server/src/infrastructure/: error.rs  responses.rs
server/src/log/: log.rs
server/src/model/: error.rs  login.rs  message.rs  message_service.rs  password.rs  repository.rs  user.rs  user_service.rs
server/src/model/repository/: error.rs  login_repository.rs  message_repository.rs  user_repository.rs
server/src/openapi/: swagger.rs
