[package]
name = "simple-api-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
log = {version = "0.4.17", features = ["std", "serde", "max_level_debug", "release_max_level_warn"]}
async-log = "2.0.0"
fern = "0.6.1"
serde = { version = "1.0.137", features = ["derive"]}
rocket = { version = "0.4.10" }
diesel = { version = "1.4.8", features = ["sqlite"] }
crypto = "0.3.0"
sha2 = "0.10.2 "
jsonwebtoken = "8.1.1"
chrono = "0.4.19"
thiserror = "1.0.31"
dotenv = "0.15.0"

[dev-dependencies]
mockall = "0.11.1"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_sqlite_pool"]
