[package]
name = "simple-api-rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juanknebel/simple-api-rust"
license = "GPL 2.0"
authors = ["Juan Knebel <juanknebel@gmail.com>"]
description = "A simple api to learn rust"
readme = "README.md"
keywords = ["api", "swagger", "rocket"]
categories = ["web-programming"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
log = {version = "0.4.17", features = ["std", "serde", "max_level_debug", "release_max_level_warn"]}
async-log = "2.0.0"
fern = "0.6.1"
serde = { version = "1.0.137", features = ["derive"]}
rocket = { version = "0.4.10" }
diesel = { version = "1.4.8", features = ["sqlite"] }
crypto = "0.4.0"
sha2 = "0.10.2 "
jsonwebtoken = "8.1.1"
chrono = "0.4.19"
thiserror = "1.0.31"
dotenv = "0.15.0"
utoipa = { version = "1.1.0", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "1.1.0" }
serde_json = "1.0.83"

[dev-dependencies]
mockall = "0.11.1"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_sqlite_pool"]
